force-app/main/default/objects/zisf__ZoomSessions__c/zisf__ZoomSessions__c.object-meta.xml
<CustomObject>
    <label>ZoomSessions</label>
    <nameField>
        <label>ZoomSessions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZoomSessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>