force-app/main/default/objects/zisf__ZoomSessions__c/fields/zisf__id_token__c.field-meta.xml
<CustomField>
    <fullName>zisf__id_token__c</fullName>
    <label>id_token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>