force-app/main/default/objects/zisf__ZoomSessions__c/fields/zisf__JWT_token_expire__c.field-meta.xml
<CustomField>
    <fullName>zisf__JWT_token_expire__c</fullName>
    <label>JWT_token_expire</label>
    <type>DateTime</type>
</CustomField>