force-app/main/default/objects/zisf__ZoomSessions__c/fields/zisf__modified_ts__c.field-meta.xml
<CustomField>
    <fullName>zisf__modified_ts__c</fullName>
    <label>modified_ts</label>
    <type>DateTime</type>
</CustomField>