force-app/main/default/objects/zisf__ZoomSessions__c/fields/zisf__session_token__c.field-meta.xml
<CustomField>
    <fullName>zisf__session_token__c</fullName>
    <label>session_token</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>