force-app/main/default/objects/zisf__ZoomSessions__c/fields/zisf__session_token_expire__c.field-meta.xml
<CustomField>
    <fullName>zisf__session_token_expire__c</fullName>
    <label>session_token_expire</label>
    <type>DateTime</type>
</CustomField>