force-app/main/default/objects/zisf__ZoomSessions__c/fields/zisf__user_id__c.field-meta.xml
<CustomField>
    <fullName>zisf__user_id__c</fullName>
    <externalId>true</externalId>
    <label>user_id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>