force-app/main/default/objects/zisf__ZoomSessions__c/fields/zisf__zoom_session_token_ext__c.field-meta.xml
<CustomField>
    <fullName>zisf__zoom_session_token_ext__c</fullName>
    <label>zoom_session_token_ext</label>
    <type>TextArea</type>
</CustomField>