force-app/main/default/objects/zisf__ZoomSessions__c/fields/zisf__zoom_username__c.field-meta.xml
<CustomField>
    <fullName>zisf__zoom_username__c</fullName>
    <label>zoom_username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>